boot/tests/errors/ty_errors/ty_errors.c
// (5, 7) While unifying 'Tuple [Tuple [Int; Int]; Int]' and 'Tuple [Tuple [Int; Str]; Int]', failed to unify 'Int' and 'Str'.
// (7, 3) While unifying 'Int' and 'Tuple []', failed to unify 'Int' and 'Tuple []'.
